--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ android:
   components:
     - build-tools-27.0.3
     - android-27
+  # Emulator Management: Create, Start and Wait
+  before_script:
+    - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
