--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ android:
   components:
     - build-tools-27.0.3
     - android-27
+  before_install:
+    - chmod +x gradlew
   # Emulator Management: Create, Start and Wait
   before_script:
     - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
