--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: android
+
 android:
   components:
+    - tools
+    - platform-tools
     - build-tools-27.0.3
     - android-27
-    - add-on
-    - extra
-    - sys-img-armeabi-v7a-android-27
-  # Emulator Management: Create, Start and Wait
-  before_script:
-    - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
-    - emulator -avd test -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+
+jdk:
+  - oraclejdk8
+
+cache:
+  directories:
+    - $HOME/.gradle/
+
+script:
+  - chmod u+x gradlew
+  - ./gradlew clean
+  - ./gradlew build
