--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.27.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0-RC1'
     implementation 'com.orhanobut:logger:2.2.0'
 }
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://dl.bintray.com/kotlin/kotlin-eap'
+    }
 }
 
 kotlin {
