renaming project package

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.example.tonyyang.tonyptt"
+        applicationId "com.tonyyang.typtt"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
