--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: android
-
 android:
   components:
-    - tools
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
     - platform-tools
-    - build-tools-28.0.2
+    - tools
+
+    # The BuildTools version used by your project
+    - build-tools-28.0.3
+
+    # The SDK version used to compile your project
     - android-28
 
-cache:
-  directories:
-    - $HOME/.gradle/
+before_script:
+    - chmod +x gradlew
 
-script:
-  - chmod u+x gradlew
-  - ./gradlew clean
-  - ./gradlew build
+script: "./gradlew build"
