--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.60'
     ext.lifecycle_version = '2.1.0'
     ext.navigation_version = '2.1.0'
+    ext.paging_version = '2.1.0'
     repositories {
         google()
         jcenter()
