Add webview page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField 'String', 'DOMAIN', "\"${project.DOMAIN}\""
         buildConfigField 'String', 'BASE_URL', "\"${project.BASE_URL}\""
     }
     buildTypes {
