--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.lifecycle_version = '2.2.0'
-    ext.navigation_version = '2.3.0'
-    ext.paging_version = '2.1.2'
+    ext {
+        kotlin_version = '1.4.0'
+        lifecycle_version = '2.2.0'
+        navigation_version = '2.3.0'
+        paging_version = '2.1.2'
+        appcompat_version = '1.2.0'
+        constraintlayout_version = '2.0.0'
+        swiperefreshlayout_version = '1.1.0'
+        material_version = '1.2.0'
+        junit_version = '4.12'
+        test_runner_version = '1.2.0'
+        test_espresso_core_version = '3.2.0'
+        jsoup_version = '1.11.3'
+        orhanobut_logger_version = '2.2.0'
+        rxjava2_rxandroid_version = '2.1.1'
+        rxjava2_rxjava_version = '2.2.12'
+    }
     repositories {
         google()
         jcenter()
