--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
         test_espresso_core_version = '3.2.0'
         jsoup_version = '1.11.3'
         orhanobut_logger_version = '2.2.0'
-        rxjava2_rxandroid_version = '2.1.1'
-        rxjava2_rxjava_version = '2.2.12'
+        rxandroid_version = '3.0.0'
+        rxjava_version = '3.0.8'
     }
     repositories {
         google()
