--- a/build.gradle
+++ b/build.gradle
@@ -2,28 +2,28 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.4.0'
+        kotlin_version = '1.5.30'
         lifecycle_version = '2.2.0'
-        navigation_version = '2.3.0'
+        navigation_version = '2.3.5'
         paging_version = '2.1.2'
-        appcompat_version = '1.2.0'
-        constraintlayout_version = '2.0.0'
+        appcompat_version = '1.3.1'
+        constraintlayout_version = '2.1.0'
         swiperefreshlayout_version = '1.1.0'
-        material_version = '1.2.0'
-        junit_version = '4.12'
-        test_runner_version = '1.2.0'
-        test_espresso_core_version = '3.2.0'
-        jsoup_version = '1.11.3'
+        material_version = '1.4.0'
+        junit_version = '4.13.2'
+        test_runner_version = '1.4.0'
+        test_espresso_core_version = '3.4.0'
+        jsoup_version = '1.13.1'
         orhanobut_logger_version = '2.2.0'
         rxandroid_version = '3.0.0'
         rxjava_version = '3.0.8'
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
@@ -32,7 +32,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
