--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
     - platform-tools
     - tools
-
-    # The BuildTools version used by your project
-    - build-tools-29.0.3
-
-    # The SDK version used to compile your project
-    - android-29
-
-before_script:
-    - chmod +x gradlew
+    - android-31
+    - build-tools-31.0.0
+    - extra-android-support
+    - extra-android-m2repository
+  licenses:
+    - android-sdk-license-.+
+before_install:
+  - yes | sdkmanager "platforms;android-31"
+jdk:
+  - oraclejdk8
 
 script: "./gradlew build"
